Fixed Spacing

--- a/css/style.css
+++ b/css/style.css
@@ -43,13 +43,13 @@ body {
 
 .resume {
   position: absolute;
-  width: 60%;
-  left: 20%;
+  width: 70%;
+  left: 15%;
   display: flex;
   flex-direction: column;
   align-items: center;
   font-family: sans-serif;
-  padding-bottom: 3vh;
+  padding-bottom: 5vh;
 }
 .resume h1 {
   font-size: 5vw;
@@ -59,13 +59,19 @@ body {
 .resume h2 {
   font-size: 1.3vw;
   font-weight: 400;
-  margin: 0px 0px 5px 0px;
+  margin: 5px 0px 5px 0px;
 }
 .resume h3 {
   width: 100%;
   justify-self: left;
-  font-size: 1.3vw;
-  margin: 15px 0px 0px 0px;
+  font-size: 1.5vw;
+  margin: 15px 0px 5px 0px;
+}
+.resume h4 {
+  width: 100%;
+  justify-self: left;
+  font-size: 1.2vw;
+  margin: 5px 0px 5px 0px;
 }
 .resume p {
   width: 100%;
@@ -75,7 +81,12 @@ body {
 .resume ul {
   width: 100%;
   justify-self: left;
-  margin: 10px 0px 10px 30px;
+  margin: 5px 0px 3px 30px;
+}
+.resume li {
+  width: 100%;
+  justify-self: left;
+  margin: 10px 0px 10px 0px;
 }
 .resume-link {
   color: black;
@@ -89,11 +100,13 @@ body {
   margin: 10px 0px 0px 0px;
 }
 .custom-line-v {
-  height: 70vh;
   width: 2px;
   background-color: #ff81af;
   border: none;
-  margin: 0px 5% 0px 5%;
+  margin: 0px 0px 0px 0px;
+
+  height: auto;
+  align-self: stretch;
 }
 
 .small-spacer {
@@ -104,9 +117,48 @@ body {
   width: 100%;
   display: flex;
   flex-direction: row;
+  justify-content: space-between;
 }
 .resume-split .box {
-  width: 45%;
+  width: 46%;
+}
+
+.box h1 {
+  font-size: 5vw;
+  font-weight: 300;
+  margin: 0px 0px 0px 0px;
+}
+.box h2 {
+  font-size: 1.3vw;
+  font-weight: 400;
+  margin: 20px 0px 5px 0px;
+}
+.box h3 {
+  width: 100%;
+  justify-self: left;
+  font-size: 1.5vw;
+  margin: 10px 0px 5px 0px;
+}
+.box h4 {
+  width: 100%;
+  justify-self: left;
+  font-size: 1.2vw;
+  margin: 5px 0px 5px 0px;
+}
+.box p {
+  width: 100%;
+  justify-self: left;
+  margin: 0px 0px 0px 0px;
+}
+.box ul {
+  width: 100%;
+  justify-self: left;
+  margin: 5px 0px 3px 0px;
+}
+.box li {
+  width: 100%;
+  justify-self: left;
+  margin: 10px 0px 10px 0px;
 }
 
 #sineCanvas {
@@ -236,6 +288,11 @@ h2 {
   flex-direction: column;
   padding-top: 40vh;
   padding-right: 8vw;
+}
+.left-text h2 {
+  font-family: sans-serif;
+  font-weight: 300;
+  font-size: 1.5vw;
 }
 
 .section {
